--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -83,6 +83,7 @@ allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.237.27.11;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -159,7 +160,6 @@ allow 162.220.14.54;
 allow 162.220.14.78;
 allow 162.251.5.152;
 allow 163.172.45.102;
-allow 164.132.58.8;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.131;
@@ -201,6 +201,7 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.121.177;
+allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
@@ -279,6 +280,7 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
+allow 185.132.53.150;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -604,7 +606,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
-allow 198.167.206.187;
+allow 198.167.206.188;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -756,6 +758,9 @@ allow 202.182.99.129;
 allow 202.6.204.129;
 allow 203.55.81.1;
 allow 203.55.81.2;
+allow 204.137.14.104;
+allow 204.137.14.105;
+allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.76.203.203;
@@ -917,6 +922,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -924,10 +930,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -947,10 +952,12 @@ allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 24.240.72.170;
+allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1164,6 +1171,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1234,7 +1242,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1736,7 +1743,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1790,6 +1796,7 @@ allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1831,6 +1838,7 @@ allow 84.211.224.201;
 allow 84.239.46.144;
 allow 85.93.218.204;
 allow 85.93.31.31;
+allow 86.54.24.21;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1839,6 +1847,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
+allow 87.120.254.132;
 allow 87.121.79.9;
 allow 88.151.192.2;
 allow 88.151.194.24;
