--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -135,6 +135,7 @@ deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -347,6 +348,7 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -417,7 +419,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
