--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -899,6 +899,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -917,7 +918,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -925,9 +925,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
-allow 23.191.200.3;
-allow 23.191.200.30;
+allow 23.191.200.27;
+allow 23.191.200.29;
+allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -974,6 +975,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1234,6 +1236,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1614,10 +1617,6 @@ allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
 allow 38.60.250.79;
-allow 38.97.116.242;
-allow 38.97.116.243;
-allow 38.97.116.244;
-allow 38.97.116.245;
 allow 43.160.194.14;
 allow 44.30.4.69;
 allow 45.11.59.28;
@@ -1735,6 +1734,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1896,7 +1896,6 @@ allow 94.72.103.33;
 allow 94.72.104.135;
 allow 94.74.164.89;
 allow 94.75.225.81;
-allow 95.102.220.155;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
