--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -897,7 +897,6 @@ set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.113;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -923,11 +922,9 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -973,7 +970,6 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1418,6 +1414,7 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
@@ -1545,7 +1542,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
-set_real_ip_from 2a12:a800:2:1:45:141:215:21;
 set_real_ip_from 2a12:a800:2:1:45:141:215:238;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
@@ -1560,7 +1556,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
-set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:2:1:45:80:158:75;
 set_real_ip_from 2a12:a800:2:1:45:80:158:93;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
@@ -1648,7 +1643,6 @@ set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
-set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.238;
 set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
@@ -1679,7 +1673,6 @@ set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.167;
 set_real_ip_from 45.80.158.27;
-set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.80.158.75;
 set_real_ip_from 45.80.158.93;
 set_real_ip_from 45.83.104.137;
@@ -1716,7 +1709,6 @@ set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.250.243.29;
-set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.29.238.25;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 5.101.82.22;
