--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,9 +123,11 @@ allow 130.193.15.79;
 allow 131.72.79.38;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 139.59.85.179;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.98.11.62;
+allow 143.110.247.195;
 allow 143.20.64.235;
 allow 144.126.133.74;
 allow 146.103.43.17;
@@ -144,6 +146,7 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
+allow 157.245.108.94;
 allow 158.174.210.51;
 allow 160.119.249.240;
 allow 160.187.148.71;
@@ -186,6 +189,7 @@ allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.234.230.113;
+allow 172.236.179.103;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
@@ -208,7 +212,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.157.33;
 allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
@@ -288,7 +291,7 @@ allow 185.177.238.9;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
-allow 185.191.239.158;
+allow 185.191.239.172;
 allow 185.193.52.180;
 allow 185.195.71.244;
 allow 185.196.220.250;
@@ -299,18 +302,7 @@ allow 185.207.107.216;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
-allow 185.220.101.100;
-allow 185.220.101.101;
-allow 185.220.101.102;
-allow 185.220.101.103;
-allow 185.220.101.104;
-allow 185.220.101.105;
-allow 185.220.101.106;
-allow 185.220.101.107;
-allow 185.220.101.108;
-allow 185.220.101.109;
 allow 185.220.101.11;
-allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -420,10 +412,6 @@ allow 185.220.101.63;
 allow 185.220.101.7;
 allow 185.220.101.8;
 allow 185.220.101.9;
-allow 185.220.101.96;
-allow 185.220.101.97;
-allow 185.220.101.98;
-allow 185.220.101.99;
 allow 185.225.69.187;
 allow 185.225.69.203;
 allow 185.225.69.232;
@@ -921,10 +909,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.31;
+allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -955,6 +946,7 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2600:3c16::2000:eaff:fe85:3765;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
@@ -1385,21 +1377,6 @@ allow 2a0b:f4c2::3;
 allow 2a0b:f4c2::30;
 allow 2a0b:f4c2::31;
 allow 2a0b:f4c2::4;
-allow 2a0b:f4c2:4::100;
-allow 2a0b:f4c2:4::101;
-allow 2a0b:f4c2:4::102;
-allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
-allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
-allow 2a0b:f4c2:4::109;
-allow 2a0b:f4c2:4::110;
-allow 2a0b:f4c2:4::96;
-allow 2a0b:f4c2:4::97;
-allow 2a0b:f4c2:4::98;
-allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1654,7 +1631,6 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.143.200.32;
-allow 45.144.209.17;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
