--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -140,6 +140,7 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2600:3c16::2000:eaff:fe85:3765;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
@@ -569,21 +570,6 @@ allow 2a0b:f4c2::3;
 allow 2a0b:f4c2::30;
 allow 2a0b:f4c2::31;
 allow 2a0b:f4c2::4;
-allow 2a0b:f4c2:4::100;
-allow 2a0b:f4c2:4::101;
-allow 2a0b:f4c2:4::102;
-allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
-allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
-allow 2a0b:f4c2:4::109;
-allow 2a0b:f4c2:4::110;
-allow 2a0b:f4c2:4::96;
-allow 2a0b:f4c2:4::97;
-allow 2a0b:f4c2:4::98;
-allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
