--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -140,6 +140,7 @@ set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::2000:34ff:fe4d:7faf;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2600:3c16::2000:eaff:fe85:3765;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
@@ -569,21 +570,6 @@ set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
 set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2::4;
-set_real_ip_from 2a0b:f4c2:4::100;
-set_real_ip_from 2a0b:f4c2:4::101;
-set_real_ip_from 2a0b:f4c2:4::102;
-set_real_ip_from 2a0b:f4c2:4::103;
-set_real_ip_from 2a0b:f4c2:4::104;
-set_real_ip_from 2a0b:f4c2:4::105;
-set_real_ip_from 2a0b:f4c2:4::106;
-set_real_ip_from 2a0b:f4c2:4::107;
-set_real_ip_from 2a0b:f4c2:4::108;
-set_real_ip_from 2a0b:f4c2:4::109;
-set_real_ip_from 2a0b:f4c2:4::110;
-set_real_ip_from 2a0b:f4c2:4::96;
-set_real_ip_from 2a0b:f4c2:4::97;
-set_real_ip_from 2a0b:f4c2:4::98;
-set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
