Update lists at 20250924-1201

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -29,6 +29,7 @@ allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2044:c141:0:1:6431:1;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
 allow 2001:67c:289c:2::235;
 allow 2001:67c:289c:2::35;
@@ -38,6 +39,8 @@ allow 2001:67c:289c:2::38;
 allow 2001:67c:289c:2::39;
 allow 2001:67c:289c:2::40;
 allow 2001:67c:289c::25;
+allow 2001:67c:289c:4::131;
+allow 2001:67c:289c:4::132;
 allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
