--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -126,6 +126,7 @@ set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.59.85.179;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 140.233.190.71;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.110.247.195;
 set_real_ip_from 143.20.64.235;
@@ -161,6 +162,9 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.58.8;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
+set_real_ip_from 171.25.193.131;
+set_real_ip_from 171.25.193.132;
+set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
 set_real_ip_from 171.25.193.25;
@@ -654,6 +658,7 @@ set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2044:c141:0:1:6431:1;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
 set_real_ip_from 2001:67c:289c:2::235;
 set_real_ip_from 2001:67c:289c:2::35;
@@ -663,6 +668,8 @@ set_real_ip_from 2001:67c:289c:2::38;
 set_real_ip_from 2001:67c:289c:2::39;
 set_real_ip_from 2001:67c:289c:2::40;
 set_real_ip_from 2001:67c:289c::25;
+set_real_ip_from 2001:67c:289c:4::131;
+set_real_ip_from 2001:67c:289c:4::132;
 set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
@@ -919,10 +926,8 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
-set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1868,7 +1873,6 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.94.51.243;
-set_real_ip_from 93.94.52.229;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.231.118;
