--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -29,6 +29,7 @@ set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2044:c141:0:1:6431:1;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
 set_real_ip_from 2001:67c:289c:2::235;
 set_real_ip_from 2001:67c:289c:2::35;
@@ -38,6 +39,8 @@ set_real_ip_from 2001:67c:289c:2::38;
 set_real_ip_from 2001:67c:289c:2::39;
 set_real_ip_from 2001:67c:289c:2::40;
 set_real_ip_from 2001:67c:289c::25;
+set_real_ip_from 2001:67c:289c:4::131;
+set_real_ip_from 2001:67c:289c:4::132;
 set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
