--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -589,7 +589,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
 deny 196.251.84.71;
-deny 198.167.206.230;
+deny 198.167.206.196;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -904,7 +904,9 @@ deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
+deny 23.191.200.4;
 deny 23.191.200.5;
+deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -927,6 +929,8 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
+deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1754,6 +1758,7 @@ deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
