--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -23,6 +23,7 @@ allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
+allow 104.244.74.51;
 allow 104.244.74.97;
 allow 104.244.75.140;
 allow 104.244.75.74;
@@ -190,7 +191,6 @@ allow 172.105.203.121;
 allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
-allow 172.234.230.113;
 allow 172.236.179.103;
 allow 172.81.131.139;
 allow 172.81.131.156;
@@ -280,7 +280,6 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
-allow 185.132.53.150;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -904,10 +903,10 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.3;
+allow 23.191.200.29;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -935,7 +934,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
-allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2600:3c16::2000:eaff:fe85:3765;
@@ -1026,6 +1024,7 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
+allow 2605:6400:30:f9dd:ecef:a3db:545c:76ee;
 allow 2605:6400:30:fa41:69b1:324f:8ed4:8f76;
 allow 2605:6400:40:fe09::2;
 allow 2605:a140:2262:7686::1;
@@ -1241,7 +1240,6 @@ allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1:108::b829:eee2;
-allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1576,7 +1574,6 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
-allow 37.228.129.162;
 allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
@@ -1801,6 +1798,7 @@ allow 82.221.139.190;
 allow 8.222.227.10;
 allow 83.147.17.190;
 allow 83.217.9.73;
+allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
