--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,12 +126,9 @@ allow 135.125.239.51;
 allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.59.85.179;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 140.233.190.71;
 allow 141.98.11.62;
-allow 143.110.247.195;
 allow 143.20.64.235;
 allow 144.126.133.74;
 allow 146.103.43.17;
@@ -150,7 +147,6 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
-allow 157.245.108.94;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -876,6 +872,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -902,8 +899,9 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.7;
@@ -951,6 +949,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1212,6 +1211,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1705,6 +1705,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
