--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -204,6 +204,7 @@ allow 176.121.81.51;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
+allow 176.65.140.210;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -251,6 +252,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -879,6 +881,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -904,12 +907,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -956,6 +959,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1219,6 +1223,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1250,6 +1255,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1604,7 +1610,6 @@ allow 43.160.194.14;
 allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
-allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
@@ -1701,7 +1706,9 @@ allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.250.243.29;
+allow 46.253.4.208;
 allow 46.29.238.25;
+allow 46.29.238.31;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1717,6 +1724,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
