Update lists at 20251002-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,7 +117,6 @@ allow 124.198.132.172;
 allow 124.198.132.237;
 allow 124.198.132.52;
 allow 125.212.241.131;
-allow 125.253.56.119;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
@@ -884,6 +883,7 @@ allow 23.137.248.100;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
+allow 23.137.255.85;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -906,13 +906,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1413,6 +1411,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
+allow 2a0c:9a40:861a:99e4::1;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
@@ -1836,6 +1835,7 @@ allow 87.120.222.33;
 allow 87.120.254.132;
 allow 87.121.79.9;
 allow 88.151.192.2;
+allow 88.80.135.28;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
