--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -602,6 +602,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
+allow 2a0c:9a40:861a:99e4::1;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
