--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -117,7 +117,6 @@ set_real_ip_from 124.198.132.172;
 set_real_ip_from 124.198.132.237;
 set_real_ip_from 124.198.132.52;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
@@ -884,6 +883,7 @@ set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
+set_real_ip_from 23.137.255.85;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
@@ -906,13 +906,11 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1413,6 +1411,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
+set_real_ip_from 2a0c:9a40:861a:99e4::1;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
 set_real_ip_from 2a0c:9f00:2:12fa::1;
 set_real_ip_from 2a0c:e300:b:b::b;
@@ -1836,6 +1835,7 @@ set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 87.121.79.9;
 set_real_ip_from 88.151.192.2;
+set_real_ip_from 88.80.135.28;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
