--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -876,6 +876,7 @@ allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.137.255.85;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.190.216.8;
 allow 23.191.200.10;
@@ -897,13 +898,10 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -933,6 +931,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1210,7 +1209,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1533,7 +1531,6 @@ allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
-allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:53;
 allow 2a12:a800:2:1:45:80:158:75;
@@ -1640,7 +1637,6 @@ allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
 allow 45.79.144.222;
-allow 45.80.158.167;
 allow 45.80.158.27;
 allow 45.80.158.53;
 allow 45.80.158.75;
@@ -1697,7 +1693,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.253.247.27;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1737,6 +1732,7 @@ allow 62.133.60.208;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 62.72.47.105;
+allow 64.190.113.106;
 allow 64.190.113.221;
 allow 64.190.76.10;
 allow 64.190.76.11;
@@ -1784,6 +1780,7 @@ allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.241;
 allow 82.153.138.7;
+allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
