Update lists at 20251005-1801

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -161,6 +161,7 @@ set_real_ip_from 162.220.14.54;
 set_real_ip_from 162.220.14.78;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
+set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.131;
@@ -457,7 +458,6 @@ set_real_ip_from 185.246.188.74;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
-set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.247.226.95;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
@@ -593,7 +593,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
-set_real_ip_from 198.167.206.223;
+set_real_ip_from 198.167.206.208;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -624,6 +624,7 @@ set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
 set_real_ip_from 200.122.181.2;
+set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
@@ -636,6 +637,7 @@ set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
 set_real_ip_from 2001:41d0:720:e300:25::;
 set_real_ip_from 2001:41d0:a:5c0::1;
+set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:41d0:f00:5600::5ad6:7567;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:470:1f06:2b4::2;
@@ -904,6 +906,7 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -1229,7 +1232,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
-set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
@@ -1720,6 +1722,7 @@ set_real_ip_from 5.181.177.130;
 set_real_ip_from 5.181.177.245;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
+set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.101.10;
