Update lists at 20251006-0601

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -277,6 +277,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
+allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.138.88.25;
 allow 185.14.31.113;
@@ -791,10 +792,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -852,6 +855,7 @@ allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
+allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.136.71.127;
