--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -277,6 +277,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
+allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.138.88.25;
 allow 185.14.31.113;
@@ -902,10 +903,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1564,6 +1567,7 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
 allow 2a14:c380:280:6::a;
+allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1608,6 +1612,7 @@ allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
+allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.136.71.127;
