--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -753,4 +753,5 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2a14:c380:280:6::a;
+deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:d::d28b;
