--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -277,6 +277,7 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.129.62.64;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.132.53.107;
 set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.138.88.25;
 set_real_ip_from 185.14.31.113;
@@ -902,10 +903,12 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -1564,6 +1567,7 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:6::a;
+set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -1608,6 +1612,7 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
+set_real_ip_from 45.133.73.63;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.136.71.127;
