--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -349,7 +349,6 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -414,7 +413,6 @@ deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
@@ -657,6 +655,7 @@ deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5a46::1;
 deny 2a0f:85c1:356:5c50::1;
+deny 2a0f:85c1:356:62ed::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -673,7 +672,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:223;
@@ -691,7 +689,6 @@ deny 2a12:a800:1:1:194:26:192:22;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
-deny 2a12:a800:1:1:2:58:56:43;
 deny 2a12:a800:1:1:2:58:56:93;
 deny 2a12:a800:1:1:45:154:98:33;
 deny 2a12:a800:2:1:185:241:208:115;
@@ -739,6 +736,7 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:53;
 deny 2a12:a800:2:1:45:80:158:75;
 deny 2a12:a800:2:1:45:80:158:93;
+deny 2a12:a800:8:1:45:94:31:68;
 deny 2a12:a800:9:1:193:26:115:123;
 deny 2a12:a800:9:1:193:26:115:140;
 deny 2a12:a800:9:1:193:26:115:43;
