--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,7 +149,6 @@ allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
 allow 155.94.139.69;
-allow 157.66.25.92;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -336,7 +335,6 @@ allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.149;
 allow 185.220.101.15;
-allow 185.220.101.151;
 allow 185.220.101.152;
 allow 185.220.101.153;
 allow 185.220.101.154;
@@ -906,10 +904,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1288,7 +1288,6 @@ allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
 allow 2a0b:f4c2:1::149;
-allow 2a0b:f4c2:1::151;
 allow 2a0b:f4c2:1::152;
 allow 2a0b:f4c2:1::153;
 allow 2a0b:f4c2:1::154;
@@ -1464,6 +1463,7 @@ allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
+allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
 allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:bfc7::216:3cff:fece:19ec;
@@ -1474,7 +1474,6 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1694,6 +1693,7 @@ allow 45.88.186.89;
 allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
+allow 45.9.156.101;
 allow 45.9.156.105;
 allow 45.9.156.161;
 allow 45.9.156.22;
@@ -1775,7 +1775,6 @@ allow 65.87.7.198;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
-allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
