--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -149,7 +149,6 @@ deny 154.16.116.61;
 deny 154.26.159.157;
 deny 154.53.58.161;
 deny 155.94.139.69;
-deny 157.66.25.92;
 deny 160.119.249.240;
 deny 160.187.148.71;
 deny 161.129.68.162;
@@ -336,7 +335,6 @@ deny 185.220.101.146;
 deny 185.220.101.147;
 deny 185.220.101.149;
 deny 185.220.101.15;
-deny 185.220.101.151;
 deny 185.220.101.152;
 deny 185.220.101.153;
 deny 185.220.101.154;
@@ -906,10 +904,12 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
+deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
@@ -1288,7 +1288,6 @@ deny 2a0b:f4c2:1::145;
 deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::149;
-deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
 deny 2a0b:f4c2:1::154;
@@ -1464,6 +1463,7 @@ deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
+deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
 deny 2a0e:bfc7::216:3cff:fe98:45cb;
 deny 2a0e:bfc7::216:3cff:fece:19ec;
@@ -1474,7 +1474,6 @@ deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5a46::1;
 deny 2a0f:85c1:356:5c50::1;
-deny 2a0f:85c1:356:62ed::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1694,6 +1693,7 @@ deny 45.88.186.89;
 deny 45.88.186.92;
 deny 45.91.250.107;
 deny 45.9.148.50;
+deny 45.9.156.101;
 deny 45.9.156.105;
 deny 45.9.156.161;
 deny 45.9.156.22;
@@ -1775,7 +1775,6 @@ deny 65.87.7.198;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
-deny 66.78.40.210;
 deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
