--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -473,7 +473,6 @@ deny 2a0b:f4c2:1::145;
 deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::149;
-deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
 deny 2a0b:f4c2:1::154;
@@ -649,6 +648,7 @@ deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
+deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
 deny 2a0e:bfc7::216:3cff:fe98:45cb;
 deny 2a0e:bfc7::216:3cff:fece:19ec;
@@ -659,7 +659,6 @@ deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5a46::1;
 deny 2a0f:85c1:356:5c50::1;
-deny 2a0f:85c1:356:62ed::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
