Update lists at 20251007-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -904,8 +904,6 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -1219,7 +1217,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1238,7 +1235,6 @@ allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6cc4::1;
-allow 2a06:1301:4050:100:0:71:127:0;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -1474,6 +1470,7 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1616,7 +1613,6 @@ allow 45.13.225.78;
 allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
-allow 45.136.71.127;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
@@ -1722,7 +1718,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1775,6 +1770,7 @@ allow 65.87.7.198;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
+allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
