--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -904,8 +904,6 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.27;
-deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
@@ -1219,7 +1217,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1238,7 +1235,6 @@ deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6cc4::1;
-deny 2a06:1301:4050:100:0:71:127:0;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
@@ -1474,6 +1470,7 @@ deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5a46::1;
 deny 2a0f:85c1:356:5c50::1;
+deny 2a0f:85c1:356:62ed::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1616,7 +1613,6 @@ deny 45.13.225.78;
 deny 45.133.73.63;
 deny 45.133.74.53;
 deny 45.134.225.36;
-deny 45.136.71.127;
 deny 45.137.70.158;
 deny 45.137.99.16;
 deny 45.137.99.182;
@@ -1722,7 +1718,6 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1775,6 +1770,7 @@ deny 65.87.7.198;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
+deny 66.78.40.210;
 deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
