Update lists at 20251007-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -188,6 +188,7 @@ allow 172.105.20.12;
 allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
+allow 172.236.179.103;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
@@ -730,10 +731,6 @@ allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.182.99.129;
 allow 203.55.81.1;
 allow 203.55.81.2;
-allow 204.137.14.104;
-allow 204.137.14.105;
-allow 204.137.14.106;
-allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.76.203.203;
 allow 204.8.156.142;
@@ -904,6 +901,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -940,6 +938,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2600:3c16::2000:eaff:fe85:3765;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
