--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -188,6 +188,7 @@ set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
+set_real_ip_from 172.236.179.103;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
@@ -730,10 +731,6 @@ set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 203.55.81.1;
 set_real_ip_from 203.55.81.2;
-set_real_ip_from 204.137.14.104;
-set_real_ip_from 204.137.14.105;
-set_real_ip_from 204.137.14.106;
-set_real_ip_from 204.137.14.92;
 set_real_ip_from 204.194.29.4;
 set_real_ip_from 204.76.203.203;
 set_real_ip_from 204.8.156.142;
@@ -904,6 +901,7 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
@@ -940,6 +938,7 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2600:3c16::2000:eaff:fe85:3765;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
