--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -720,7 +720,6 @@ deny 2001:67c:e60:c0c:192:42:116:216;
 deny 2001:67c:e60:c0c:192:42:116:217;
 deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
-deny 2001:818:dd58:a900:2512:9be4:189f:86a;
 deny 2001:b011:4006:54d6::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
@@ -881,7 +880,6 @@ deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.137.255.85;
 deny 23.151.8.8;
-deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.190.216.8;
 deny 23.191.200.10;
@@ -908,6 +906,7 @@ deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
+deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -940,12 +939,10 @@ deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2600:3c16::2000:eaff:fe85:3765;
-deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1217,6 +1214,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1590,7 +1588,6 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1721,6 +1718,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1841,7 +1839,6 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
-deny 89.115.155.184;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
