Update lists at 20251009-0601

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -284,6 +284,7 @@ allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.156.72.7;
+allow 185.165.169.132;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -900,8 +901,6 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -1238,6 +1237,7 @@ allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
 allow 2a06:1700:0:12::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:39d::28:a38d;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
