--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -427,6 +427,7 @@ deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
 deny 2a06:1700:0:12::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:39d::28:a38d;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
