--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -427,6 +427,7 @@ allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
 allow 2a06:1700:0:12::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:39d::28:a38d;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
