--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -116,10 +116,8 @@ deny 124.198.132.13;
 deny 124.198.132.172;
 deny 124.198.132.237;
 deny 124.198.132.52;
-deny 125.212.241.131;
 deny 125.253.56.119;
 deny 128.31.0.13;
-deny 130.193.10.21;
 deny 130.193.15.186;
 deny 131.72.79.38;
 deny 136.244.111.163;
@@ -298,6 +296,22 @@ deny 185.193.52.180;
 deny 185.195.71.244;
 deny 185.207.107.130;
 deny 185.207.107.216;
+deny 185.220.100.240;
+deny 185.220.100.241;
+deny 185.220.100.242;
+deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
+deny 185.220.100.252;
+deny 185.220.100.253;
+deny 185.220.100.254;
+deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
@@ -568,7 +582,6 @@ deny 194.53.137.102;
 deny 194.53.137.156;
 deny 194.55.167.14;
 deny 194.87.55.98;
-deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
@@ -758,7 +771,6 @@ deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
 deny 209.141.50.249;
-deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.55.26;
 deny 209.141.58.254;
@@ -880,6 +892,7 @@ deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.137.255.85;
 deny 23.151.8.8;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.190.216.8;
 deny 23.191.200.10;
@@ -904,8 +917,10 @@ deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
+deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -937,6 +952,7 @@ deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2600:3c16::2000:eaff:fe85:3765;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -1263,6 +1279,22 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1484,7 +1516,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:223;
