--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -129,6 +129,7 @@ deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2600:3c16::2000:eaff:fe85:3765;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -454,6 +455,22 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -675,7 +692,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:223;
